Contract Configurator 1.22.0
- Added minArgumentOfPeriapsis and maxArgumentOfPeriapsis to Orbit parameter.
- Make references to 'Sun' generic in SolarScience.cfg to fix Galileo compatibility (thanks SirBriguy).
- Added Sun() function to get the Sun in a non-name specific way.  Assumes a single star.
- Change enum parse to be case insensitive.
- Change Vessel Identifier parsing to allow a wider range of characters.
- Fixed format text for funding message in mission control (thanks JPLRepo).
- Fixed issue with NextUnreachedBody() call caching results (thanks severedsolo).

Contract Configurator 1.21.0
- Found new workaround for GetExportedTypes reflection issue (the "toolbar" issue).
- Added NextUnreachedBody() and NextUnreachedBodies() methods.
- Added Part.MassDry() and Part.MassWet() methods.
- Added CelestialBody.CanHaveSynchronousOrbit() method.
- Recompile Kerbal Konstructs integration.
- Fixed contract window text not updating for dynamic text (duration timers, etc.).

Contract Configurator 1.20.3
- Regenerate biome data for KSP 1.2 biomes (fixes Field Research "Rare Science" contracts, thanks FlatEric).
- Added RemoteTech integration back in.
- Fixed issue with nested contract groups not working (thanks jeisen).

Contract Configurator 1.20.2
- Support for KSP 1.2
- Allow contract title in mission control to span two lines.
- Moved settings into stock settings screen.
- Fixed NRE when vessel's Landed At string is null (thanks SamLex).
- Check for sufficient funds when there are negative contract advances (thanks 5thHorseman).
- Fixed display issue with partially complete CollectScience parameters.

Contract Configurator 1.19.0
- Added Part.UnlockCost().
- Added Part.Resources().
- Added Part.ResourceCapacity().
- Reworked ParameterDelegate - worst source of in-flight LINQ (ie. garbage).
- Check contract requirements before displaying them in mission control in case something has changed.
- Fixed issues with part parser (thanks 5thHorseman).