@@ -18,6 +18,7 @@ namespace ContractConfigurator
     {
         protected int index;
         protected double distance;
+        protected double horizontalDistance;
         protected bool hideOnCompletion;
         protected bool showMessages;
 
@@ -28,6 +29,7 @@ namespace ContractConfigurator
 
             valid &= ConfigNodeUtil.ParseValue<int>(configNode, "index", x => index = x, this, 0, x => Validation.GE(x, 0));
             valid &= ConfigNodeUtil.ParseValue<double>(configNode, "distance", x => distance = x, this, 0.0, x => Validation.GE(x, 0.0));
+            valid &= ConfigNodeUtil.ParseValue<double>(configNode, "horizontalDistance", x => distance = x, this, 0.0, x => Validation.GE(x, 0.0));
             valid &= ConfigNodeUtil.ParseValue<bool>(configNode, "hideOnCompletion", x => hideOnCompletion = x, this, true);
             valid &= ConfigNodeUtil.ParseValue<bool>(configNode, "showMessages", x => showMessages = x, this, false);
 
@@ -36,7 +38,7 @@ namespace ContractConfigurator
 
         public override ContractParameter Generate(Contract contract)
         {
-            VisitWaypoint vw = new VisitWaypoint(index, distance, hideOnCompletion, showMessages, title);
+            VisitWaypoint vw = new VisitWaypoint(index, distance, horizontalDistance, hideOnCompletion, showMessages, title);
             return vw.FetchWaypoint(contract) != null ? vw : null;
         }
     }
